# registerC

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  hexwriter.c
assets/: index.html  person-manager.js  styles.css
config/: config.ini
docker-script/: build_env.sh  connect_env.sh  start_env.sh  stop_env.sh
include/: application.h  database.h  menu_register.h  person.h  repository.h  repository_factory.h  use_cases.h  view_base.h  view_factory.h
resources/: edit_window.glade  insert_window.glade  window.glade
src/: application.c  database.c  main.c  menu.c  person.c
src/adapters/controllers/: person_controller_base.h  person_controller_factory.c  person_controller_factory.h
src/adapters/controllers/cli_controller/: person_controller_cli.c  person_controller_cli.h
src/adapters/controllers/cli_controller/cli/: cli.c  cli.h
src/adapters/controllers/gtk_controller/: person_controller_events_base.h  person_controller_gtk.c  person_controller_gtk.h
src/adapters/controllers/gtk_controller/view/: gtk_view.c  gtk_view.h  view_base.h
src/adapters/controllers/gtk_controller/view/editdialog/: edit_dialog.c  edit_dialog.h
src/adapters/controllers/gtk_controller/view/insertdialog/: insert_dialog.c  insert_dialog.h
src/adapters/controllers/gtk_controller/view/mainwindow/: main_window.c  main_window.h
src/adapters/controllers/webserver_controller/: person_controller_webserver.c  person_controller_webserver.h
src/adapters/controllers/webserver_controller/handlers/: handler_delete.c  handler_get.c  handler_index.c  handler_old.c  handler_post.c  handler_put.c  handler_version.c  handlers.c  handlers.h
src/adapters/controllers/webserver_controller/webserver/: webserver.c  webserver.h
src/adapters/repositories/: person_repository_factory.c  person_repository_factory.h
src/adapters/repositories/file/: person_repository_file.c  person_repository_file.h
src/adapters/repositories/sqlite/: person_repository_sqlite.c  person_repository_sqlite.h
src/config/: configuration.c  configuration.h
src/domain/model/: person.c  person.h
src/domain/ports/: person_repository_base.h  person_service_base.h
src/domain/services/: person_service.c  person_service.h
src/repository/: repository.c  repository_factory.c
src/repository/file/: file_database.c  file_database.h
src/repository/sqlite/: sqlite_database.c  sqlite_database.h
src/use_cases/: person_add.c  person_delete.c  person_find.c  person_list.c  person_quit.c  person_update.c
src/view/: view_factory.c
src/view/cli/: cli.c  cli.h
src/view/gtk/: gtk.h
